--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "productName": "gametest",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": "src/index.js",
+  "main": "./src/ElectronConfig/index.js",
+  "type": "module",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
